--- a/links/index.html
+++ b/links/index.html
@@ -1,5 +1,5 @@
 
 <h1>福岡華人教会</h1>
 <ul class="posts">
-    <li><span>20230917</span> &raquo; <a href="https://www.youtube.com/channel/UCGDP2iDdpRma1d3beQ6gwLg" title="福岡華人教会">证道 赞美(youtube)</a></li>
+    <li><span>锡安宣道所</span> &raquo; <a href="https://www.youtube.com/channel/UCGDP2iDdpRma1d3beQ6gwLg" title="福岡華人教会">证道 赞美(youtube)</a></li>
 </ul>
